--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,7 +9,8 @@
     padding-top     : 15px;
     padding-bottom  : 10px;
     background-color: #F6F6F6;
-    // position        : fixed;
+    position        : fixed;
+    opacity         : 0.9;
     width           : @full-width;
 
     h1 {
